<resources>
    <string name="app_name">Whatsapp</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="app_email">Email</string>
    <string name="app_nome">Digite seu nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">Main4Activity</string>
</resources>
